# my-test-protobuf-convert

./: CMakeLists.txt  Readme.md  build.sh  gcsv_to_protobuf.py
proto/: gyroflow.proto
src/: embed_protobuf.cpp  gyroflow.pb.cc  gyroflow.pb.h  main.cpp
